k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: saveshies
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: saveshies
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saveshies
  labels:
    app: saveshies
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saveshies
  template:
    metadata:
      name: saveshies
      labels:
        app: saveshies
    spec:
      volumes:
        # Create the shared files volume to be used in both pods
        - name: shared-files
          emptyDir: {}

        # Add the ConfigMap we declared above as a volume for the pod
        - name: nginx-config-volume
          configMap:
            name: nginx-config

        - name: logs-storage
          persistentVolumeClaim:
            claimName: saveshies

      imagePullSecrets:
        - name: registry.wawan.pro
      containers:
        # Our PHP-FPM application
        - image: registry.wawan.pro/wawan93/saveshies:v1.1.4
          name: saveshies
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - name: logs-storage
              mountPath: /var/www/html/storage

          # Important! After this container has started, the PHP files
          # in our Docker image aren't in the shared volume. We need to
          # get them into the shared volume. If we tried to write directly
          # to this volume from our Docker image the files wouldn't appear
          # in the nginx container.
          #
          # So, after the container has started, copy the PHP files from this
          # container's local filesystem (/app -- added via the Docker image)
          # to the shared volume, which is mounted at /var/www/html.
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html"]
        - image: nginx:latest
          name: nginx
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
