k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shies.demo.wawan.pro
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - shies.demo.wawan.pro
        - saveshies.ru
      secretName: letsencrypt-prod
  rules:
    - host: shies.demo.wawan.pro
      http:
        paths:
          - path: /
            backend:
              serviceName: saveshies
              servicePort: 80
    - host: saveshies.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: saveshies
              servicePort: 80
